--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     namespace 'com.example.ocr_metal_detector'
     compileSdk 33
 
+
     defaultConfig {
         applicationId "com.example.ocr_metal_detector"
         minSdk 24
@@ -22,9 +23,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+    }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 }
 
@@ -33,12 +37,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
     testImplementation 'junit:junit:4.13.2'
+   // implementation 'com.google.cloud:google-cloud-language:2.24.0'
+    implementation 'com.google.android.gms:play-services-cast-framework:21.3.0'
     implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.0'
-
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-//    implementation 'com.github.dhaval2404:imagepicker:2.1'
-//    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+
 }
